--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -7,6 +7,8 @@
   justify-content: center;
   border: 1px solid black;
   margin: 0 7.5px 15px;
+  background-position: center;
+  background-size: cover;
 
   &:first-child {
     margin-right: 7.5px;
@@ -14,6 +16,10 @@
 
   &:last-child {
     margin-left: 7.5px;
+  }
+
+  &.large {
+    height: 380px;
   }
 
   .content {
